apps/yana-stocks/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: yana-stocks
spec:
  selector:
    app: user-service
  ports:
    - port: 3000
      targetPort: 3000
